--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "workspaces": [
     "packages/*"
   ],
+  "author": "Thiago Mendonca <trystan2k@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "@changesets/cli": "~2.26.0",
     "@commitlint/cli": "~17.4.2",
