--- a/packages/shared-library/package.json
+++ b/packages/shared-library/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@mfes/shared-library",
   "version": "1.0.0",
+  "author": "Thiago Mendonca <trystan2k@gmail.com>",
+  "license": "MIT",
   "main": "./src/index.ts",
   "scripts": {
     "lint:fix": "npm run lint -- --fix",
